# qt-certificate-addon

./: meson.build  meson_options.txt
